# staffops-otel-libs

./: .gitignore  ANALISE-PROBLEMAS.md  CHANGELOG.md  CONSUMING.md  README.md
.claude/: settings.json
.github/workflows/: ci.yml
.kiro/specs/metrics-exporter-contract/: design.md  requirements.md  tasks.md
.kiro/steering/: project-conventions.md
docs/site/: index.md
dotnet/: HOW-TO.md  OtelHelper.sln  README.md  TESTS.md
dotnet/OtelHelper/: LoggingSetup.cs  MetricsSetup.cs  OtelHelper.csproj  TelemetryExtensions.cs  TracerSetup.cs
dotnet/OtelHelper.AWS/: OtelAwsExtensions.cs  OtelHelper.AWS.csproj
dotnet/OtelHelper.Profiling/: IProfilingProvider.cs  OtelHelper.Profiling.csproj  OtelProfilingExtensions.cs  ProfilingPrerequisiteWarning.cs  ProfilingPrerequisites.cs  PyroscopeProfilingProvider.cs
dotnet/OtelHelper.Redis/: OtelHelper.Redis.csproj  OtelRedisExtensions.cs
dotnet/OtelHelper.Sql/: OtelHelper.Sql.csproj  OtelSqlExtensions.cs
dotnet/OtelHelper.Tests/: MetricsContractTests.cs  OptionsTests.cs  OtelHelper.Tests.csproj  OtlpProtocolTests.cs  ProfilingTests.cs  SamplerPrecedenceTests.cs  SignalIntegrationTests.cs  SubpackageExtensionsTests.cs  TelemetryPipelineTests.cs  TestCollections.cs  TlsEndpointResolutionTests.cs  TracingAndOptionsHelperTests.cs
dotnet/OtelHelper/Models/: TelemetryOptions.cs  TelemetryOptionsPostConfigure.cs  TelemetryOptionsValidator.cs
dotnet/example/: README.md
dotnet/example/dotnet-api/: Dockerfile.demo
dotnet/example/dotnet-backend/: Dockerfile.demo
dotnet/example/dotnet-process/: Dockerfile.demo
go/: HOW-TO.md  README.md  config.go  coverage_test.go  go.mod  go.sum  instrumentation.go  logging.go  metrics.go  metrics_contract_test.go  options.go  options_test.go  otelhelper.go  otlp_protocol_test.go  signal_integration_test.go  tracing.go
go/example/go-api/: main.go
go/example/go-backend/: main.go
go/example/go-process/: main.go
go/ext/otelaws/: aws.go  go.mod  go.sum
go/ext/otelredis/: go.mod  go.sum  redis.go
go/ext/otelsql/: go.mod  go.sum  sql.go
python/: HOW-TO.md  README.md  TESTS.md  pyproject.toml
python/otel_helper/: __init__.py  config.py  logging_setup.py  metrics.py  setup.py  tracing.py
python/otel_helper/ext/: __init__.py  aws.py  redis.py  sql.py
python/tests/: conftest.py  test_config.py  test_ext.py  test_metrics_contract.py  test_otlp_protocol.py  test_sampler_precedence.py  test_setup.py  test_signal_integration.py
