[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otel-helper"
version = "0.1.0"
description = "OpenTelemetry instrumentation helper for Python"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-api>=1.42,<2",
    "opentelemetry-sdk>=1.42,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.42,<2",
    "opentelemetry-exporter-prometheus>=0.63b0",
    "prometheus-client>=0.20.0",
    # Always-on instrumentations (web/HTTP frameworks + runtime metrics).
    # SQL/Redis/AWS live in the optional extras below.
    "opentelemetry-instrumentation-fastapi>=0.63b0",
    "opentelemetry-instrumentation-httpx>=0.63b0",
    "opentelemetry-instrumentation-requests>=0.63b0",
    "opentelemetry-instrumentation-grpc>=0.63b0",
    "opentelemetry-instrumentation-system-metrics>=0.63b0",
]

[project.optional-dependencies]
aws = ["opentelemetry-instrumentation-botocore>=0.63b0"]
redis = ["opentelemetry-instrumentation-redis>=0.63b0"]
sql = ["opentelemetry-instrumentation-sqlalchemy>=0.63b0"]
all = ["otel-helper[aws,redis,sql]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["otel_helper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
